# yaaytos

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  S1.toml  S5.toml
backend/: Cargo.toml
backend/src/: main.rs  state.rs
backend/src/api/: mod.rs
backend/src/api/events/: errors.rs  get.rs  mod.rs
backend/src/api/participations/: get.rs  mod.rs
backend/src/api/persons/: errors.rs  get.rs  mod.rs
backend/src/api/seasons/: errors.rs  get.rs  mod.rs
backend/src/db/: mod.rs
backend/src/db/events/: get.rs  model.rs
backend/src/db/match/: model.rs
backend/src/db/participations/: get.rs  model.rs
backend/src/db/persons/: get.rs  model.rs
backend/src/db/seasons/: get.rs  model.rs
backend/src/domain/models/: event.rs  match.rs  mod.rs  participation.rs  person.rs  season.rs
common/: Cargo.toml
common/src/: event.rs  lib.rs  match.rs  participation.rs  person.rs  season.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/src/: main.rs
frontend/src/components/: home.rs  mod.rs  season.rs
src/: config.rs  main.rs  match_box.rs  matching_night.rs  multiset_permutations.rs  new_participant.rs  permutations.rs
