[package]
name = "yaaytos-backend"
version = "0.1.0"
authors = ["Lars <lpewewq@gmail.com>"]
edition = "2021"

[dependencies]
yaaytos-common = { path = "../common" }

axum = { version = "0.7.7" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
