[package]
name = "yaaytos-frontend"
version = "0.1.0"
authors = ["Lars <lpewewq@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.6", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
